--- a/views/menu/card.hbs
+++ b/views/menu/card.hbs
@@ -1,39 +1,39 @@
 <div id="buycard" class="d-flex">
- 
+
     <div class="col-8 m-2 d-flex justify-content-evenly">
         {{!-- DATA SOURSE --}}
         <input type="radio" class="btn-check btn-buy-card" name="btnradio" id="selectcard1" autocomplete="off"
-            data-bs-toggle="collapse" data-bs-target="#multiCollapseCards">
+             onclick="buyCard('Viettel');">
         <label class=" btn-buy-card text-secondary fw-bold" for="selectcard1">
             <img src=" https://static.mservice.io/img/momo-upload-api-ic_viettel@3x-181218153720.png"
                 class="icon ps-2 me-4" alt=""> Viettel
         </label>
 
         <input type="radio" class="btn-check btn-buy-card" name="btnradio" id="selectcard2" autocomplete="off"
-            data-bs-toggle="collapse" data-bs-target="#multiCollapseCards">
+            data-bs-toggle="collapse" data-bs-target="#multiCollapseCards" onclick="buyCard('Mobifone');">
         <label class=" btn-buy-card text-secondary fw-bold" for="selectcard2">
             <img src="https://static.mservice.io/img/momo-upload-api-ic_mobifone@3x-181218160800.png"
                 class="icon ps-2 me-4" alt="">Mobifone
         </label>
 
         <input type="radio" class="btn-check btn-buy-card" name="btnradio" id="selectcard3" autocomplete="off"
-            data-bs-toggle="collapse" data-bs-target="#multiCollapseCards">
+            data-bs-toggle="collapse" data-bs-target="#multiCollapseCards" onclick="buyCard('Vinaphone');">
         <label class=" btn-buy-card text-secondary fw-bold " for="selectcard3">
             <img src="https://static.mservice.io/img/momo-upload-api-ic_vinaphone@3x-181218163535.png"
                 class="icon ps-2 me-4" alt="">Vinaphone
         </label>
-
     </div>
-
-       {{!-- DATA TARGET --}}
+    {{!-- DATA TARGET --}}
     <div class="p-2">
-        <div class="collapse multi-collapse" id="multiCollapseCards" data-bs-parent="#buycard">
-            <div class="card card-body">
+        <div id="showCard" >
+            <div class="card card-body p-5">
                 {{!-- EDIT ACTION --}}
                 <form action="" method="post">
                     <div class="mb-3">
+                        <h4 class="text-success" id="selectedCard"> </h4>
+                        <input type="text" id="iselectedCard">
                         <label for="slcard" class="form-label"> Chọn mệnh giá</label>
-                        <select class="form-control form-select form-select-sm" id="slcard">
+                        <select class="form-control form-select form-select-sm" id="slcard" onchange="calculateCardPrice()">
                             <option value="0"> </option>
                             <option value="1">10.000 VNĐ</option>
                             <option value="2">20.000 VNĐ</option>
@@ -41,15 +41,16 @@
                             <option value="4">100.000 VNĐ</option>
                         </select>
                     </div>
-                    {{!-- QUANTITY --}}
-                    <div class="mb-3" id="slQuantity">
+                    {{!-- SELECTED CARD --}}
+                    <div class="mb-3" >
                         <label for="card-quantity" class="form-label"> Nhập số lượng</label>
-                        <input id="card-quantity" type="number" id="slQuantity" name="quantity" min="1" max="5">
-                        <div class="mt-3" id="slQuantity">
-                            <label class="form-label"> Tổng tiền: 0VNĐ</label>
+                        <input id="card-quantity" type="number" value="1" name="quantity" min="1"
+                            max="5" onchange="calculateCardPrice()">
+                        <div class="mt-3" >
+                            <label class="form-label"> Tổng tiền: <strong class="text-danger" id="totalPriceCard">0</strong> VNĐ <p>(Sale còn 0Đ)</p></label> 
                         </div>
+                        <button type="submit" class="btn btn-success"> Xác nhận</button>
                     </div>
-
                 </form>
             </div>
         </div>
