--- a/views/menu/transfer.hbs
+++ b/views/menu/transfer.hbs
@@ -1,6 +1,7 @@
 <div class="container">
     <!-- TODO: ADD ACTION URL -->
-    <form action="" method="post">
+    {{!-- <form action="" method="post"> --}}
+        <p id="transfer_alert"></p>
         <h3> Chuyển tiền cho người dùng khác</h3>
         <div class="mb-3">
             <label for="t_reveiver_phone" class="form-label">Số điện thoại người nhận</label>
@@ -23,18 +24,35 @@
             <input type="text" class="form-control" id="t_reveiver_otp" placeholder="Vui lòng nhập Mã xác thực OTP"
                 aria-describedby="button_send_otp" required>
             <form action="/" method="post">
-            
-            <!--TODO: CHANGE ID TO SESSION USER ID FROM ONCLICK BTN -->
-                <button class="btn btn-primary" type="submit" id="button_send_otp_transfer" onclick="sendOTP('1234')">Gửi mã OTP</button>
+
+                <!--TODO: CHANGE ID TO SESSION USER ID FROM ONCLICK BTN -->
+                <button class="btn btn-primary" type="submit" id="button_send_otp_transfer"
+                    onclick="sendOTP('1234')">Gửi mã OTP</button>
             </form>
 
         </div>
+        <div class="mb-3">
+            <p>Phí chuyển tiền</p>
+            <div class="form-check">
+                <input class="form-check-input t_fee_user" type="radio" name="flexRadioDefault" id="transfer_fee_type" value="sender" name="transfer_fee_person">
+                <label class="form-check-label" for="transfer_fee_type">
+                    Người gửi trả
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input t_fee_user" type="radio" name="flexRadioDefault" id="transfer_fee_type2" value="receiver"  name="transfer_fee_person" checked>
+                <label class="form-check-label" for="transfer_fee_type2">
+                    Người nhận trả
+                </label>
+            </div>
+        </div>
+
         <!-- TODO: ADD DYNAMIC RANGE --->
         <div class="mt-3 mb-3">
             <h4 class="mt-3 text-end">Phí dịch vụ (5%): <span class="text-primary" id="t_reveiver_fee_withdraw">0
                     đ</span></h4>
             <h4 class="mt-3 text-end">Tổng tiền: <span class="text-danger" id="t_reveiver_total">0 đ</span></h4>
         </div>
-        <button type="submit" class="btn btn-success u-btn-submit">Submit</button>
-    </form>
+        <button type="submit" class="btn btn-success u-btn-submit" onclick="transfer_submit()">Submit</button>
+    {{!-- </form> --}}
 </div>
