--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,10 +5,8 @@
   {{#if title}}
   <title>{{title}}</title>
   {{/if}}
-  <meta name="viewport" content="width=device-width,user-scalable=no">
+
   <link href="https://cdn-icons-png.flaticon.com/512/272/272525.png" rel="icon">
-    {{#if admin}}
-   
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -18,25 +16,34 @@
   
      <link rel='stylesheet' href='/css/main.css' />
     <script src="/js/main.js"></script>
-""
-    {{else}}
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    {{/if}}
+
 
 </head>
 
 <body>
+  {{!-- This is flash error alert --}}
+  {{#if flash.success}}
+    <div style="text-align:center;padding:10px;border: 1px solid lightblue;
+    background: #8aee81;color: rgb(8, 77, 2);border-radius:5px">
+    <b>{{flash.intro}}</b>
+     {{{flash.message}}}
+     </div>
+    
+    {{else if flash.message}}
+    <div style="text-align:center;padding:10px;border: 1px solid lightblue;
+    background: #f77575;color: rgb(108,13,13);border-radius:5px">
+    <b>{{flash.intro}}</b>
+     {{{flash.message}}}
+     </div>
+     {{/if}}
+  {{!-- This is flash error alert --}}
 
   {{#if admin}}
     {{{body}}}
   {{else}}
-    <nav id="navbar" class="navbar navbar-expand-lg bg-light navbar-light shadow-sm px-5 py-3 py-lg-0">
-    <a href="/" class="navbar-brand p-0">
-      <h1 class="text-uppercase text-secondary"><img class="pe-2 pb-1" src="https://play-lh.googleusercontent.com/PtMVPSG8gCNkChbJf1Bbk-coBM4dQP5lVC5ZfHJLgkZJT-AbuDfhyIx4thEB3I9u9Lg" witdth="45" height="45" ></img>K.T.N
+      <nav id="navbar" class="navbar navbar-expand-lg bg-light navbar-light shadow-sm px-5 py-3 py-lg-0">
+    <a href="" class="navbar-brand p-0">
+      <h1 class="m-0 text-uppercase text-secondary"><i class="fa-solid fa-money-bill-transfer text-success"></i>K.T.N
       </h1>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -47,112 +54,105 @@
         <a href="/" class="nav-item nav-link active">Trang chủ</a>
         <div class="nav-item dropdown">
           <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Dịch vụ</a>
-          <div class="dropdown-menu m-0">
-            <a class="dropdown-item" data-bs-toggle="collapse" data-bs-target="#multiCollapseDeposit">Nạp tiền</a>
-            <a class="dropdown-item" data-bs-toggle="collapse" data-bs-target="#multiCollapseWithdraw">Rút Tiền</a>
-            <a class="dropdown-item" data-bs-toggle="collapse" data-bs-target="#multiCollapseTransfer">Chuyển
-              tiền</a>
-            <a class="dropdown-item" data-bs-toggle="collapse" data-bs-target="#multiCollapseCard">Mua thẻ</a>
-            <a class="dropdown-item" data-bs-toggle="collapse" data-bs-target="#multiCollapseTransHistory">Lịch sử giao
-              dịch</a>
+          <div class="dropdown-menu m-0" >
+            <a href="blog.html" class="dropdown-item"></a>
+            <a href="detail.html" class="dropdown-item">Nạp tiền</a>
+            <a href="team.html" class="dropdown-item">Rút Tiền</a>
+            <a href="/creditcards" class="dropdown-item">Chuyển tiền</a>
+            <a href="/creditcards" class="dropdown-item">Mua thẻ</a>
+            <a href="/creditcards" class="dropdown-item">Lịch sử giao dịch</a>
           </div>
         </div>
-       
- 
+
+        <a href="/profile" class="nav-item nav-link">Thông tin cá nhân</a>
 
 
       </div>
-
-      <div class="d-none d-lg-flex align-items-center">
-         <div class="nav-item dropdown">
-          <img width="65" src="https://i.pravatar.cc/150?u={{user.id}}" alt="Avatar"
-                class=" nav-link dropdown-toggle rounded-circle" data-bs-toggle="dropdown" data-bs-target="#multiCollapseInformation"  />
-          <div class="dropdown-menu m-0">
-            <a class="dropdown-item" data-bs-toggle="collapse" data-bs-target="#multiCollapseInformation">Thông tin cá nhân</a>
-            <a href="/logout" class="dropdown-item"> Đăng xuất</a>
-          </div>
-        </div>
+      
+      <div class="d-none d-lg-flex align-items-center ps-4">
+        <a href="/logout" class="nav-item nav-link">Đăng xuất</a>
+        {{!-- <a href="/login" class="nav-item nav-link text-success">Đăng kí</a> --}}
       </div>
   </nav>
-  <div class="container">
+    <div class="container">
     {{{body}}}
   </div>
-    <!-- Footer End -->
+
+  <!-- Footer Start -->
+  <div class="container-fluid bg-secondary bg-footer text-light-gray py-5">
+    <div class="container py-5">
+      <div class="row g-5">
+
+        <div class="col-lg-3 col-md-6">
+          <h3 class="text-light text-center">Ví điện tử KTN</h3>
+          <h6 class="text-light text-center">an toàn tiện lợi nhanh chóng</h6>
+          <div class="d-flex flex-column justify-content-start ">
+            <small class="text-light-gray" href="#">Giao diện thân thiện dễ sử dụng</small>
+            <small class="text-light-gray" href="#">Thanh toán nhanh chóng</small>
+            <small class="text-light-gray" href="#">Đăng ký tài khoản dễ dàng</small>
+            <small class="text-light-gray" href="#">Hỗ trợ nhiều dịch vụ cần thiết cho người dùng</small>
+          </div>
+        </div>
+
+       
+
+        <div class="col-lg-3 col-md-6">
+          <h4 class="text-light">Dịch vụ</h4>
+          <hr class="w-25 text-secondary mb-4" style="opacity: 1;">
+          <div class="d-flex flex-column justify-content-start">
+            <a class="text-light-gray mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Nạp tiền</a>
+            <a class="text-light-gray mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Rút tiền</a>
+            <a class="text-light-gray mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Mua thẻ</a>
+            <a class="text-light-gray mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Lịch sử giao dịch</a>
+          </div>
+        </div>
+
+         <div class="col-lg-3 col-md-6">
+          <h4 class="text-light">Liên hệ</h4>
+          <hr class="w-25 text-secondary mb-4" style="opacity: 1;">
+          <p class="mb-4">Cảm ơn bạn đã quan tâm đến dịch vụ của chúng tôi!</p>
+          <p class="mb-2"><i class="fa fa-map-marker-alt text-success me-3"></i>Quận 7, HCM</p>
+          <p class="mb-2"><i class="fa fa-envelope text-success me-3"></i>@...</p>
+          <p class="mb-0"><i class="fa fa-phone-alt text-success me-3"></i>+...</p>
+        </div>
+        
+        <div class="col-lg-3 col-md-6">
+          <h4 class="text-light">Nhận thông báo</h4>
+          <hr class="w-25 text-secondary mb-4" style="opacity: 1;">
+          <form action="">
+            <div class="input-group">
+              <input type="text" class="form-control p-3 border-0" placeholder="Nhập email của bạn">
+              <button class="btn btn-primary">Sign Up</button>
+            </div>
+          </form>
+          <h6 class="text-light mt-4 mb-3">Follow Us</h6>
+          <div class="d-flex">
+            <a class="btn btn-lg btn-success btn-lg-square rounded-circle me-2" href="#"><i
+                class="fab fa-twitter"></i></a>
+            <a class="btn btn-lg btn-success btn-lg-square rounded-circle me-2" href="#"><i
+                class="fab fa-facebook-f"></i></a>
+            <a class="btn btn-lg btn-success btn-lg-square rounded-circle me-2" href="#"><i
+                class="fab fa-linkedin-in"></i></a>
+            <a class="btn btn-lg btn-success btn-lg-square rounded-circle" href="#"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row g-5">
+      <div class="col-10">
+        <p class="mb-md-0">Copyright &copy; <a class="text-light fw-bold" href="#">Kien Truong - Nguyen Tran - Trong
+            Nguyen </a>. All Rights Reserved.</p>
+      </div>
+      <!-- Back to Top -->
+      <div class="col-2"> <a href="#" class="btn btn-lg btn-secondary btn-lg-square rounded-circle back-to-top"><i
+            class=" fa-solid fa-arrow-up"></i></a></div>
+    </div>
+  </div>
+  <!-- Footer End -->
+  {{/if}}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
 </body>
-<!-- Footer Start -->
-<footer class="container-fluid bg-secondary bg-footer text-light-gray py-5">
-  <div class="container py-5">
-    <div class="row g-5">
-
-      <div class="col-lg-3 col-md-6">
-        <h3 class="text-light text-center">Ví điện tử KTN</h3>
-        <h6 class="text-light text-center">an toàn tiện lợi nhanh chóng</h6>
-        <div class="d-flex flex-column justify-content-start ">
-          <small class="text-light-gray" href="#">Giao diện thân thiện dễ sử dụng</small>
-          <small class="text-light-gray" href="#">Thanh toán nhanh chóng</small>
-          <small class="text-light-gray" href="#">Đăng ký tài khoản dễ dàng</small>
-          <small class="text-light-gray" href="#">Hỗ trợ nhiều dịch vụ cần thiết cho người dùng</small>
-        </div>
-      </div>
-
-
-
-      <div class="col-lg-3 col-md-6">
-        <h4 class="text-light">Dịch vụ</h4>
-        <hr class="w-25 text-secondary mb-4" style="opacity: 1;">
-        <div class="d-flex flex-column justify-content-start">
-          <a class="text-light-gray mb-2" data-bs-toggle="collapse" data-bs-target="#multiCollapseDeposit"><i class="fa fa-angle-right me-2"></i>Nạp tiền</a>
-          <a class="text-light-gray mb-2" data-bs-toggle="collapse" data-bs-target="#multiCollapseWithdraw"><i class="fa fa-angle-right me-2"></i>Rút tiền</a>
-          <a class="text-light-gray mb-2" data-bs-toggle="collapse" data-bs-target="#multiCollapseCard"><i class="fa fa-angle-right me-2"></i>Mua thẻ</a>
-          <a class="text-light-gray mb-2" data-bs-toggle="collapse" data-bs-target="#multiCollapseTransHistory"><i class="fa fa-angle-right me-2"></i>Lịch sử giao dịch</a>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-6">
-        <h4 class="text-light">Liên hệ</h4>
-        <hr class="w-25 text-secondary mb-4" style="opacity: 1;">
-        <p class="mb-4">Cảm ơn bạn đã quan tâm đến dịch vụ của chúng tôi!</p>
-        <p class="mb-2"><i class="fa fa-map-marker-alt text-success me-3"></i>Quận 7, HCM</p>
-        <p class="mb-2"><i class="fa fa-envelope text-success me-3"></i>@...</p>
-        <p class="mb-0"><i class="fa fa-phone-alt text-success me-3"></i>+...</p>
-      </div>
-
-      <div class="col-lg-3 col-md-6">
-        <h4 class="text-light">Nhận thông báo</h4>
-        <hr class="w-25 text-secondary mb-4" style="opacity: 1;">
-        <form action="">
-          <div class="input-group">
-            <input type="text" class="form-control p-3 border-0" placeholder="Nhập email của bạn">
-            <button class="btn btn-primary">Sign Up</button>
-          </div>
-        </form>
-        <h6 class="text-light mt-4 mb-3">Follow Us</h6>
-        <div class="d-flex">
-          <a class="btn btn-lg btn-success btn-lg-square rounded-circle me-2" href="#"><i
-              class="fab fa-twitter"></i></a>
-          <a class="btn btn-lg btn-success btn-lg-square rounded-circle me-2" href="https://www.facebook.com/adtruongdinhkien/"><i
-              class="fab fa-facebook-f"></i></a>
-          <a class="btn btn-lg btn-success btn-lg-square rounded-circle me-2" href="#"><i
-              class="fab fa-linkedin-in"></i></a>
-          <a class="btn btn-lg btn-success btn-lg-square rounded-circle" href="#"><i class="fab fa-instagram"></i></a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row g-5">
-    <div class="col-10">
-      <p class="mb-md-0">Copyright &copy; <a class="text-light fw-bold" href="#">Kien Truong - Nguyen Tran - Trong
-          Nguyen </a>. All Rights Reserved.</p>
-    </div>
-    <!-- Back to Top -->
-    <div class="col-2"> <a href="#" class="btn btn-lg btn-secondary btn-lg-square rounded-circle back-to-top"><i
-          class=" fa-solid fa-arrow-up"></i></a></div>
-  </div>
-</footer>
 <script src="js/main.js"></script>
-  {{/if}}
-
 </html>
