--- a/views/layouts/login.hbs
+++ b/views/layouts/login.hbs
@@ -12,7 +12,7 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="/css/main.css">
-
+    <script src="/js/main.js"></script>
 </head>
 <body>
   <div class="container">
