--- a/views/user/register.hbs
+++ b/views/user/register.hbs
@@ -15,7 +15,7 @@
                             <div class="col-md-8 u-login-card-padding">
                                 <div class="card-body p-4">
                                     <!-- TODO: DO SOMETHING WITH ALERT-->
-                                    <div id="register_error" class="alert alert-danger" role="alert">
+                                    <div id="register_error" class="alert" role="alert">
                                         
                                     </div>
 
